2019-01-01  Ben Elliston  <bje@gnu.org>

	* configure.ac: Abort if AWK is not installed.
	* configure: Regenerate.

2019-01-01  Ben Elliston  <bje@gnu.org>

	* config.guess: Update to latest version.
	* config.sub: Likewise.

2019-01-01  Ben Elliston  <bje@gnu.org>

	* configure.ac: Add AC_PROG_AWK check.
	* configure: Regenerate.

2018-12-29  Jacob Bachmeyer  <jcb62281@gmail.com>

	* dejagnu: Avoid use of semicolon as sed(1) command separator.
	POSIX does not clearly require sed(1) to support that feature.

2018-12-28  Jacob Bachmeyer  <jcb62281@gmail.com>

	* testsuite/lib/util-defs.exp: Whitespace clean up.

2018-12-21  Jacob Bachmeyer  <jcb62281@gmail.com>

	PR 33817
	* dejagnu: Improve command parsing to fix bug. Previously, the
	documented equivalence between "multi word command" and
	"multi-word-command" did not hold if no arguments were given.
	* testsuite/launcher.all/command.exp: Add tests.

2018-12-20  Ben Elliston  <bje@gnu.org>

	* NEWS: Add item for new dejagnu command.

	* Makefile.am (EXTRA_DIST): Remove $(XML).
	* Makefile.in: Regenerate.

2018-12-20  Jacob Bachmeyer  <jcb62281@gmail.com>

	* Makefile.am (EXTRA_DIST): Add "dejagnu" launcher script and
	contents of $(commands_DATA).
	(bin_SCRIPTS): Add "dejagnu" launcher script.
	(commandsdir): Installation directory for "dejagnu" subcommands is
	$(pkgdatadir)/commands.
	(commands_DATA): New, contains "commands/help.sh" as initial item.
	(TESTSUITE_FILES): Add testsuite for same.
	(DEJATOOL): Add "launcher" to list of tools to test.
	(dist_man_MANS): Add man pages for "dejagnu" and "dejagnu help".

	* doc/dejagnu.texi (Running other DejaGnu commands): New chapter.
	(Invoking dejagnu): New node for dejagnu(1) launcher script.
	(Invoking dejagnu help): New node.

	* doc/dejagnu.1: New man page.
	* doc/dejagnu-help.1: New man page.

	* dejagnu: New script.

	* commands/help.sh: New dejagnu subcommand for reading manpages.

	* testsuite/launcher.all/command.exp: New file.